# advent-of-code

./: .gitignore  new-aoc-day.ps1  pyproject.toml
advent_of_code/utility/: __init__.py  open_input.py
advent_of_code/year_2015/day_01/: __init__.py  day_01.py  main.py
advent_of_code/year_2015/day_02/: __init__.py  day_02.py  main.py
advent_of_code/year_2015/day_03/: __init__.py  day_03.py  main.py
advent_of_code/year_2015/day_04/: __init__.py  day_04.py  main.py
advent_of_code/year_2015/day_05/: __init__.py  day_05.py  main.py
advent_of_code/year_2015/day_06/: __init__.py  day_06.py  main.py
advent_of_code/year_2015/day_07/: __init__.py  day_07.py  main.py
advent_of_code/year_2015/day_08/: __init__.py  day_08.py  main.py
advent_of_code/year_2024/day_01/: __init__.py  main.py
advent_of_code/year_2024/day_02/: __init__.py  main.py  reactor_safety.py
advent_of_code/year_2024/day_03/: __init__.py  main.py  recover_good_multiplies.py
advent_of_code/year_2024/day_04/: __init__.py  main.py  (+1 more)
test/test_2015/: test_2015_day01.py  test_2015_day02.py  test_2015_day03.py  test_2015_day04.py  test_2015_day05.py  test_2015_day06.py  test_2015_day07.py  test_2015_day08.py
test/test_2024/: test_01.py  test_02.py  test_03.py  test_04.py  test_05.py  test_08.py  test_09.py  test_10.py  test_11.py  test_17.py  test_20.py  test_21.py  test_25.py
test/test_2025/: test_2025_01.py  test_2025_02.py  test_2025_03.py  test_2025_04.py  test_2025_05.py  test_2025_day06.py  test_2025_day07.py  test_2025_day08.py  test_2025_day09.py  test_2025_day10.py  test_2025_day11.py
(+55 files in other folders)
