[project]
name = "advent-of-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "humanize>=4.11.0",
    "icecream>=2.1.3",
    "pytest>=8.3.4",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "coverage>=7.6.9",
    "pytest>=8.3.4",
]
